--- a/foundry.toml
+++ b/foundry.toml
@@ -9,6 +9,17 @@ gas_reports = ["*"]
 optimizer = true
 optimizer_runs = 200
 via_ir = true
+ast = true
+build_info = true
+build_info_path = "out/build-info"
+extra_output = ["storageLayout"]
+extra_output_files = ["metadata"]
+force = true
+fs_permissions = [
+  { access = "read", path = "./deployments" },
+  { access = "read-write", path = "./deployments" },
+  { access = "read", path = "./" }
+]
 
 remappings = ['@openzeppelin=lib/openzeppelin-contracts/','@openzeppelin/upgradeable=lib/openzeppelin-contracts-upgradeable/','@openzeppelin/upgrades=lib/openzeppelin-foundry-upgrades/']
 
